_commom.scssファイルの作成
・このファイルに共通の記述をする
・google fontsを読み込んだ

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+body {
+  font-family: "Kameron", "Noto Sans JP", sans-serif;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
 p {
   color: purple;
 }/*# sourceMappingURL=style.css.map */
