--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,1 +1,62 @@
+@use "../globals" as *;
 @use "../parts/common" as *;
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background-color: transparent;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    z-index: 100;
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        @extend .content-width;
+    }
+
+    & .logo {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+
+        &__github {
+            display: block;
+            line-height: 1;
+        }
+        & img {
+            display: block;
+            width: 30px;
+            height: 30px;
+            margin: 0 auto;
+        }
+    }
+
+    &__nav {
+        @extend .flex;
+        align-items: center;
+        display: none;
+        font-size: 24px;
+        line-height: 1;
+        @include mq(lg) {
+            display: block;
+        }
+    }
+    &__ul {
+        display: flex;
+        align-items: center;
+        list-style: none;
+        padding: 0;
+    }
+    &__li {
+        margin: 11px 10px;
+        & > a {
+            color: $cBlack;
+            text-transform: uppercase;
+        }
+    }
+}
