--- a/styles/parts/_common.scss
+++ b/styles/parts/_common.scss
@@ -1,3 +1,5 @@
+@use "../globals" as *;
+
 body {
     font-family: 'Kameron', 'Noto Sans JP', sans-serif;
 }
@@ -5,4 +7,20 @@ body {
 img {
     max-width: 100%;
     vertical-align: bottom;
+}
+
+.content-width {
+    width: 90%;
+    margin: 0 auto;
+    max-width: $contentMaxWidth;
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+
+    @include mq(md) {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
