--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,6 +1,15 @@
 @use "../globals" as *;
 @use "../parts/common" as *;
 
+
+.container {
+    position: relative;
+    z-index: 10;
+    background: $cWhite;
+    transition: transform 0.5s, box-shadow 0.5s;
+    height: 1000px;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -9,7 +18,7 @@
     height: 80px;
     background-color: transparent;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-between;
     z-index: 100;
     &__inner {
@@ -22,7 +31,7 @@
     & .logo {
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: center;
 
         &__github {
             display: block;
