--- a/styles/parts/_mobile-menu.scss
+++ b/styles/parts/_mobile-menu.scss
@@ -10,8 +10,18 @@ $cMenuOpen: $cBlack;
     width: 300px;
 
     & .logo {
-        padding: 0 40px;
-        font-size: 38px;
+        display: block;
+        padding: 0 100px;
+        font-size: 24px;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        text-align: center;
+
+        & img {
+            width: 50px;
+            height: 50px;
+            margin: 0 auto;
+        }
     }
 
     &__btn {
@@ -24,7 +34,7 @@ $cMenuOpen: $cBlack;
             display: none;
         }
 
-        &>span {
+        & > span {
             background-color: $cMenuClose;
             width: 35px;
             height: 2px;
@@ -44,7 +54,7 @@ $cMenuOpen: $cBlack;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.05);
         opacity: 0;
         visibility: hidden;
         transition: opacity 1s;
@@ -76,8 +86,8 @@ $cMenuOpen: $cBlack;
 }
 
 .menu-open {
-    & #container {
-        transform: translate(-300px, 60px);
+    & .container {
+        transform: translateX(-300px);
         box-shadow: 0 8px 40px -10px rgba(0, 0, 0, 0.8);
     }
 
@@ -85,6 +95,10 @@ $cMenuOpen: $cBlack;
         &__cover {
             opacity: 1;
             visibility: visible;
+        }
+
+        & .logo {
+            opacity: 1;
         }
 
         &__item {
