--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,82 @@ img {
   }
 }
 
+.logo__github {
+  color: #333;
+}
+
+.mb-sm, .sub-title {
+  margin-bottom: 16px !important;
+}
+
+.mb-lg {
+  margin-bottom: 80px !important;
+}
+@media screen and (min-width: 960px) {
+  .mb-lg {
+    margin-bottom: 150px !important;
+  }
+}
+
+.pb-sm {
+  padding-bottom: 16px !important;
+}
+
+.pb-lg {
+  padding-bottom: 80px !important;
+}
+@media screen and (min-width: 960px) {
+  .pb-lg {
+    padding-bottom: 150px !important;
+  }
+}
+
+.font-sm, .sub-title {
+  font-size: 14px;
+}
+@media screen and (min-width: 960px) {
+  .font-sm, .sub-title {
+    font-size: 16px;
+  }
+}
+
+.font-md {
+  font-size: 17px;
+}
+@media screen and (min-width: 960px) {
+  .font-md {
+    font-size: 19px;
+  }
+}
+
+.font-lr {
+  font-size: 17px;
+}
+@media screen and (min-width: 960px) {
+  .font-lr {
+    font-size: 23px;
+  }
+}
+
+.font-lg, .main-title {
+  font-size: 25px;
+}
+@media screen and (min-width: 960px) {
+  .font-lg, .main-title {
+    font-size: 36px;
+  }
+}
+
+.main-title {
+  font-weight: 600;
+  margin-bottom: 0;
+  display: block;
+}
+
+.sub-title {
+  color: #535353;
+}
+
 .mobile-menu {
   position: fixed;
   right: 0;
@@ -31,8 +107,17 @@ img {
   width: 300px;
 }
 .mobile-menu .logo {
-  padding: 0 40px;
-  font-size: 38px;
+  display: block;
+  padding: 0 100px;
+  font-size: 24px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  text-align: center;
+}
+.mobile-menu .logo img {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
 }
 .mobile-menu__btn {
   background-color: unset;
@@ -62,7 +147,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.05);
   opacity: 0;
   visibility: hidden;
   transition: opacity 1s;
@@ -89,13 +174,16 @@ img {
   text-decoration: none !important;
 }
 
-.menu-open #container {
-  transform: translate(-300px, 60px);
+.menu-open .container {
+  transform: translateX(-300px);
   box-shadow: 0 8px 40px -10px rgba(0, 0, 0, 0.8);
 }
 .menu-open .mobile-menu__cover {
   opacity: 1;
   visibility: visible;
+}
+.menu-open .mobile-menu .logo {
+  opacity: 1;
 }
 .menu-open .mobile-menu__item {
   transform: none;
@@ -132,6 +220,14 @@ img {
   transform: translateY(-11px) rotate(-135deg);
 }
 
+.container {
+  position: relative;
+  z-index: 10;
+  background: #fff;
+  transition: transform 0.5s, box-shadow 0.5s;
+  height: 1000px;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -140,7 +236,7 @@ img {
   height: 80px;
   background-color: transparent;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
   z-index: 100;
 }
@@ -152,7 +248,7 @@ img {
 .header .logo {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
 .header .logo__github {
   display: block;
