--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ img {
   vertical-align: bottom;
 }
 
-.content-width, .header__inner, .footer {
+.content-width, .header__inner, .footer, .skills {
   width: 90%;
   margin: 0 auto;
   max-width: 1070px;
@@ -54,20 +54,20 @@ img {
   }
 }
 
-.font-sm, .sub-title {
+.font-sm, .card__desc, .sub-title {
   font-size: 14px;
 }
 @media screen and (min-width: 960px) {
-  .font-sm, .sub-title {
+  .font-sm, .card__desc, .sub-title {
     font-size: 16px;
   }
 }
 
-.font-md {
+.font-md, .card__title {
   font-size: 17px;
 }
 @media screen and (min-width: 960px) {
-  .font-md {
+  .font-md, .card__title {
     font-size: 19px;
   }
 }
@@ -101,8 +101,7 @@ img {
 }
 
 .hero {
-  height: 1000px;
-  background-color: #eee;
+  padding: 100px 0;
 }
 
 .mobile-menu {
@@ -384,4 +383,46 @@ img {
 }
 .icon.github::before {
   background-image: url(../../images/github-icon.png);
+}
+
+.devicon-javascript-plain {
+  font-size: 200px;
+}
+
+.skills {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  text-align: center;
+  padding: 30px 0;
+  margin: 0 auto 50px;
+  background: #fff;
+  box-shadow: -3px -3px 8px #aaaaaa, 3px 3px 8px #ffffff;
+}
+@media screen and (min-width: 600px) {
+  .card {
+    width: 42.5%;
+  }
+}
+.card__content {
+  margin: 10px auto 0;
+  width: 200px;
+}
+.card__title {
+  width: 80%;
+  padding: 7px 0;
+  margin: 0 auto 10px;
+  border-radius: 100px;
+  background: #fff;
+  box-shadow: 4px 4px 8px #aaa, -4px -4px 8px #fff;
+}
+.card__desc {
+  color: #535353;
+  width: 200px;
 }/*# sourceMappingURL=style.css.map */
